# OpenCL-PI-BBP

./: .gitignore  CMakeLists.txt  PI2  PI2.cpp  PI2.hpp  PI2_SPEC  README.md  cl.hpp  err_code.h  pi_kernel.cl
tests/: PI2.spec.cpp
